improved welcome page

--- a/dev/templates/_includes/components/head/head.jade
+++ b/dev/templates/_includes/components/head/head.jade
@@ -1,6 +1,6 @@
 
 mixin head(data)
-	- var project_mame = 'BitTemplate'
+	- var project_mame = 'Project name'
 		unless (data)
 			- var data = {}
 	head
